--- a/mylibrary/src/main/res/values/styles.xml
+++ b/mylibrary/src/main/res/values/styles.xml
@@ -125,4 +125,12 @@
         <item name="actionBarSize">45dp</item>
         <item name="colorPrimaryDark">#CCa500</item>
     </style>
+
+    <style name="Theme.Transparent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
 </resources>
