--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,20 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:orientation="vertical">
 
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:visibility="gone"
         android:text="用户" />
 
-    <Button
-        android:id="@+id/button5"
+
+
+    <TextView
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="操作" />
+        android:text="服务器地址:"/>
+    <EditText
+       android:layout_marginTop="5dp"
+        android:id="@+id/zy_ip"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="http://60.191.37.212:36080/"/>
+
+    <EditText
+        android:layout_marginTop="15dp"
+        android:id="@+id/zy_user"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="账户"/>
+
+    <RelativeLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+        <EditText
+
+            android:id="@+id/zy_pass"
+            android:layout_width="160dp"
+            android:layout_alignParentLeft="true"
+            android:layout_height="match_parent"
+            android:hint="验证码"/>
+
+        <Button
+            android:id="@+id/zy_code_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="获取验证码"/>
+
+    </RelativeLayout>
+
+
+
+
+    <Button
+        android:layout_marginTop="30dp"
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:text="管理员登录" />
+
+
+    <Button
+        android:layout_marginTop="30dp"
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:text="用户登录" />
 </LinearLayout>
